--- a/style.css
+++ b/style.css
@@ -17,6 +17,8 @@ body {
     margin: 0;
     padding: 0;
     display: flex;
+    flex-direction: column;
+    
     width: 100vw;
     height: 100vh;
     justify-content: center;
