--- a/style.css
+++ b/style.css
@@ -6,6 +6,18 @@
     color: black;
 }
 
+h1 {
+    color: white; 
+    text-align: center; 
+    padding: 30px;
+    margin: 50px;
+    border: 2px solid black;
+    background-color: rgb(40, 116, 151);
+    border-radius: 5px;
+    transform: translateY(-200px);
+    position: fixed;
+}
+
 :root {
     --hue-neutral: 200;
     --hue-wrong: 0;
